--- a/test.tex
+++ b/test.tex
@@ -4,14 +4,16 @@
 \usepackage{graphicx}
 \usetheme{Boadilla}
 \usecolortheme{beaver} %{beetle}%{crane} 
-\usepackage{textpos}
-\usepackage{tikz}
+%\usepackage{textpos}
+%\usepackage{tikz}
 
 
 \title[Priliminary Plots]{Some Priliminary Plots}
 
-\author[Ram krishna Sharma]{{\bf Ramkrishna Sharma}\inst{1}, Test1\inst{2}, Test2\inst{3}, test4\inst{1}}
-\institute[Delhi,INDIA]{\inst{1}University of Delhi, \inst{2}National Taiwan University, \inst{3}Brazilian Center for Physics Research}
+
+
+\author[Bibhuprasad Mahakud]{{\bf Bibhuprasad Mahakud}\inst{1}, Author1\inst{2}, Author2\inst{3}, Author3\inst{1}}
+\institute[Mumbai,INDIA]{\inst{1}Tata Institute of Fundamental Research,Mumbai, \inst{2}Institute2, \inst{3}Institute3}
 \date[\today]{\today}
 
 \setbeamertemplate{footline}[slide number]
@@ -19,7 +21,7 @@
 
 \titlegraphic{
 	\includegraphics[width=1.5cm,keepaspectratio]{cern.jpg}\hspace*{3.35cm}~%
-	\includegraphics[width=2cm,keepaspectratio]{logo_du.jpeg}\hspace*{2.75cm}~%
+	\includegraphics[width=2cm,keepaspectratio]{tifr_logo.jpg}\hspace*{2.75cm}~%
 	\includegraphics[width=1.5cm,keepaspectratio]{cmsLogo.jpeg}
 }
 
